# python-project-practice

./: .gitattributes  .gitignore  .pre-commit-config.yaml  main.ipynb  pyproject.toml  readme.md
cases/: pyleak_check.py
tests/: test_leak.py
