[project]
name = "python-showcase"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx>=0.28.1",
    "jupytext>=1.17.2",
    "notebook>=7.4.4",
    "pyleak>=0.1.14",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "q>=2.7",
]


[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true


[tool.pytest.ini_options]
markers = [
    "no_leaks: detect asyncio task leaks, thread leaks, and event loop blocking"
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.5",
    "ruff>=0.12.2",
]
